Fix contrast ratio for illegible text and archival notes on gray bg

--- a/app/assets/stylesheets/global/tei.scss
+++ b/app/assets/stylesheets/global/tei.scss
@@ -126,7 +126,7 @@ $overwrite_color: $brandy; // darken($brand-success, 10%);
 }
 
 .tei_note_type_archival {
-  color: #aaa;
+  color: #6c6c6c;
   font-family: $font-family-monospace;
   display: block;
 }
@@ -406,7 +406,7 @@ span.pageimage {
 
 .unclear,
 .tei_gap_reason_illegible {
-  color: #aaa;
+  color: #6c6c6c;
 }
 
 /* Will need to discuss if we want to keep this, 
